// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconMenu rendering renders expected elements 1`] = `
<React.Fragment>
  <IconButton
    aria-controls={null}
    aria-haspopup="true"
    className="IconMenu"
    data-layer={null}
    disabled={false}
    icon={
      {
        "icon": [],
        "iconName": "ellipsis-v-thin",
      }
    }
    id="random-id"
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
</React.Fragment>
`;

exports[`IconMenu rendering renders expected elements when all items are disabled 1`] = `
<React.Fragment>
  <IconButton
    aria-controls={null}
    aria-haspopup="true"
    className="IconMenu"
    data-layer={null}
    disabled={true}
    icon={
      {
        "foo": "test",
      }
    }
    id="random-id"
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
</React.Fragment>
`;

exports[`IconMenu rendering renders expected elements when disabled is set 1`] = `
<React.Fragment>
  <IconButton
    aria-controls={null}
    aria-haspopup="true"
    className="IconMenu"
    data-layer={null}
    disabled={true}
    icon={
      {
        "foo": "test",
      }
    }
    id="random-id"
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
</React.Fragment>
`;

exports[`IconMenu rendering renders expected elements when expanded is true 1`] = `
<React.Fragment>
  <IconButton
    aria-controls="random-id-menu"
    aria-expanded={true}
    aria-haspopup="true"
    className="IconMenu"
    data-layer={2}
    disabled={false}
    icon={
      {
        "foo": "test",
      }
    }
    id="random-id"
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
  <React.Portal
    container="body"
  >
    <Layer
      className="IconMenu__popUp"
      level={2}
    >
      <ul
        aria-labelledby="random-id"
        className="IconMenu__menu"
        id="random-id-menu"
        role="menu"
      >
        <MenuItem
          data-index={0}
          id="random-id-0"
          type="default"
        >
          one
        </MenuItem>
        <MenuItem
          data-index={1}
          id="random-id-1"
          type="default"
        >
          two
        </MenuItem>
      </ul>
    </Layer>
  </React.Portal>
</React.Fragment>
`;

exports[`IconMenu rendering renders expected elements when optional properties are set 1`] = `
<React.Fragment>
  <IconButton
    aria-controls={null}
    aria-haspopup="true"
    className="IconMenu TestClass"
    data-layer={null}
    disabled={false}
    icon={
      {
        "foo": "test",
      }
    }
    id="random-id"
    overlay={
      <MenuArrow
        className="IconMenu__overlay"
      />
    }
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
</React.Fragment>
`;
